# chimera

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml  full_benchmark.yaml  gemini_eval.yaml  openai_eval.yaml
data/: .gitkeep
data/calibration/: README.md  seed_tasks.jsonl
data/seed/error_detection/: error_detection_seed.json
data/seed/knowledge_boundary/: knowledge_boundary_seed.json
docs/: README.md  cli_reference.md  configuration.md  index.md  mkdocs.yml  quickstart.md
docs/api/: evaluation.md  generators.md  models.md
docs/concepts/: calibration.md  introspection.md  metrics.md
docs/getting-started/: cli.md  installation.md  quickstart.md
docs/tutorials/: custom_tasks.md  model_comparison.md
examples/: basic_evaluation.py  custom_dataset.py
examples/notebooks/: calibration_analysis.ipynb  model_comparison.ipynb
src/chimera/: __init__.py  version.py
src/chimera/cli/: __init__.py  config_loader.py  main.py
src/chimera/evaluation/: __init__.py  aggregation.py  comparison.py  pipeline.py
src/chimera/generators/: __init__.py  base.py  calibration.py  difficulty.py  error_detection.py  error_injection.py  knowledge_boundary.py  self_correction.py  templates.py
src/chimera/interfaces/: __init__.py  base.py  gemini.py  openai.py  parsers.py
src/chimera/metrics/: __init__.py  base.py  calibration.py  error_detection.py  knowledge_boundary.py  self_correction.py  visualization.py
src/chimera/models/: __init__.py  evaluation.py  response.py  schemas.py  task.py
src/chimera/runner/: __init__.py  aggregator.py  config.py  executor.py  report.py
tests/: __init__.py  conftest.py  test_version.py
tests/test_cli/: __init__.py  conftest.py  test_config_loader.py  test_integration.py  test_main.py  test_utils.py
tests/test_error_detection/: __init__.py  test_error_detection_generator.py  test_error_detection_metrics.py  test_error_injection.py
tests/test_evaluation/: test_aggregation.py  test_comparison.py  test_pipeline.py
tests/test_generators/: __init__.py  test_calibration.py
tests/test_interfaces/: __init__.py  test_models.py  test_parsers.py
tests/test_knowledge_boundary/: __init__.py  test_generator.py  test_metrics.py
tests/test_metrics/: __init__.py  test_calibration.py  test_visualization.py
tests/test_models/: __init__.py  test_evaluation.py  test_response.py  test_task.py
tests/test_runner/: __init__.py  test_aggregator.py  test_config.py  test_executor.py
tests/test_self_correction/: __init__.py  test_generator.py  test_metrics.py
